# Sortir_Dans_Paris

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  main.cpp
doc/def/: doxygen.def
doc/html/: BarPlotGenerator_8cpp.html  BarPlotGenerator_8cpp__incl.dot  BarPlotGenerator_8cpp_source.html  BarPlotGenerator_8h.html  BarPlotGenerator_8h.js  BarPlotGenerator_8h__dep__incl.dot  BarPlotGenerator_8h__incl.dot  BarPlotGenerator_8h_source.html  GraphicsUtils_8h.html  GraphicsUtils_8h.js  GraphicsUtils_8h__dep__incl.dot  GraphicsUtils_8h__incl.dot  GraphicsUtils_8h_source.html  PieChartGenerator_8cpp.html  PieChartGenerator_8cpp__incl.dot  PieChartGenerator_8cpp_source.html  PieChartGenerator_8h.html  PieChartGenerator_8h.js  PieChartGenerator_8h__dep__incl.dot  PieChartGenerator_8h__incl.dot  PieChartGenerator_8h_source.html  annotated.html  annotated_dup.js  apiHandler_8cpp.html  apiHandler_8cpp__incl.dot  apiHandler_8cpp_source.html  apiHandler_8h.html  apiHandler_8h.js  apiHandler_8h__dep__incl.dot  apiHandler_8h__incl.dot  apiHandler_8h_source.html  classAPIHandler-members.html  classAPIHandler.html  classAPIHandler.js  classAPIHandler__coll__graph.dot  classAPIHandler_a1f4ab7c08b86cfa50d2840a7c2c49a8f_cgraph.dot  classAPIHandler_a4bfdc7673d871bce4390ced1fe56dcaa_icgraph.dot  classAPIHandler_a9689d8f7c4ec016cca6ef5fa047b3b05_cgraph.dot  classAPIHandler_a9689d8f7c4ec016cca6ef5fa047b3b05_icgraph.dot  classBarPlotGenerator-members.html  (+213 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_6.js  classes_7.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  (+35 more)
doc/latex/: BarPlotGenerator_8cpp.tex  BarPlotGenerator_8cpp.tex.tmp  BarPlotGenerator_8cpp__incl.dot  BarPlotGenerator_8cpp_source.tex  BarPlotGenerator_8h.tex  BarPlotGenerator_8h__dep__incl.dot  BarPlotGenerator_8h__incl.dot  BarPlotGenerator_8h_source.tex  GraphicsUtils_8h.tex  GraphicsUtils_8h__dep__incl.dot  GraphicsUtils_8h__incl.dot  GraphicsUtils_8h_source.tex  PieChartGenerator_8cpp.tex  PieChartGenerator_8cpp__incl.dot  PieChartGenerator_8cpp_source.tex  PieChartGenerator_8h.tex  PieChartGenerator_8h__dep__incl.dot  PieChartGenerator_8h__incl.dot  PieChartGenerator_8h_source.tex  annotated.tex  apiHandler_8cpp.tex  apiHandler_8cpp__incl.dot  apiHandler_8cpp_source.tex  apiHandler_8h.tex  apiHandler_8h__dep__incl.dot  apiHandler_8h__incl.dot  apiHandler_8h_source.tex  classAPIHandler.tex  classAPIHandler__inherit__graph.dot  classAPIHandler_a1f4ab7c08b86cfa50d2840a7c2c49a8f_cgraph.dot  classAPIHandler_a4bfdc7673d871bce4390ced1fe56dcaa_icgraph.dot  classAPIHandler_a9689d8f7c4ec016cca6ef5fa047b3b05_cgraph.dot  classAPIHandler_a9689d8f7c4ec016cca6ef5fa047b3b05_icgraph.dot  classBarPlotGenerator.tex  classBarPlotGenerator__coll__graph.dot  classBarPlotGenerator_a0b6c4355989e09b9309c7f9585947cdf_icgraph.dot  classBarPlotGenerator_a5d0ca705fe16f9ff03ca9c38bbd5ffb9_icgraph.dot  classBarPlotGenerator_a6e101c7e9279aaabde95d62076331f75_cgraph.dot  classBarPlotGenerator_a6e101c7e9279aaabde95d62076331f75_icgraph.dot  classBarPlotGenerator_a8607516727d0c8f609e3f2017bf11c5e_cgraph.dot  (+135 more)
doc/man/man3/: APIHandler.3  BarPlotGenerator.3  BarPlotGenerator.cpp.3  BarPlotGenerator.h.3  Color.3  ConcreteObserver.3  DataStorage.3  FetchIntervalTimeUnit.3  FileHelper.3  GraphicsUtils.h.3  HEIGHT.3  HR.3  Observable.3  Observer.3  PeriodicFetcher.3  PieChartGenerator.3  PieChartGenerator.cpp.3  PieChartGenerator.h.3  PieChartSegment.3  SignalHandler.3  _PieChartGenerator.3  _home_antony_c_autre_buildroot-2023.08_linux_emb_sortirDansParis_include_.3  _home_antony_c_autre_buildroot-2023.08_linux_emb_sortirDansParis_include_connectApi_.3  _home_antony_c_autre_buildroot-2023.08_linux_emb_sortirDansParis_include_fileManagement_.3  _home_antony_c_autre_buildroot-2023.08_linux_emb_sortirDansParis_include_gdGeneration_.3  _home_antony_c_autre_buildroot-2023.08_linux_emb_sortirDansParis_include_service_.3  _home_antony_c_autre_buildroot-2023.08_linux_emb_sortirDansParis_include_storage_.3  _home_antony_c_autre_buildroot-2023.08_linux_emb_sortirDansParis_src_.3  _home_antony_c_autre_buildroot-2023.08_linux_emb_sortirDansParis_src_connectApi_.3  _home_antony_c_autre_buildroot-2023.08_linux_emb_sortirDansParis_src_fileManagement_.3  _home_antony_c_autre_buildroot-2023.08_linux_emb_sortirDansParis_src_gdGeneration_.3  _home_antony_c_autre_buildroot-2023.08_linux_emb_sortirDansParis_src_service_.3  apiHandler.cpp.3  apiHandler.h.3  color.3  concreteObserver.cpp.3  (+23 more)
html/: files.html  globals.html  globals_func.html  globals_vars.html  main_8cpp.html  main_8cpp__incl.dot  md__r_e_a_d_m_e.html  menudata.js  namespace_fetch_interval_time_unit.html  namespaces.html  pages.html
html/search/: all_0.js  all_2.js  functions_1.js  namespaces_0.js  searchdata.js  variables_0.js
include/connectApi/: apiHandler.h  concreteObserver.h  observable.h  observer.h
include/fileManagement/: fileHelper.h
include/gdGeneration/: BarPlotGenerator.h  GraphicsUtils.h  PieChartGenerator.h  utils.h
include/service/: fetchIntervalTimeUnit.h  periodicFetcher.h  signalHandler.h
include/storage/: dataStorage.h
latex/: files.tex  main_8cpp.tex  main_8cpp.tex.tmp  main_8cpp__incl.dot  md__r_e_a_d_m_e.tex  namespace_fetch_interval_time_unit.tex  namespaces.tex  refman.tex
src/connectApi/: apiHandler.cpp  concreteObserver.cpp  observable.cpp
src/fileManagement/: fileHelper.cpp
src/gdGeneration/: BarPlotGenerator.cpp  PieChartGenerator.cpp
src/service/: periodicFetcher.cpp  signalHandler.cpp
src/storage/: dataStorage.cpp
